kubernetes/downloads/radarr-hd/app/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: radarr-hd
  namespace: downloads
spec:
  parentRefs:
    - name: internal
      namespace: network
  hostnames:
    - "radarr-hd.whoverse.dev"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: radarr-hd
          port: 7878
